Fixed spacing

--- a/frontend/src/css/Greeting.css
+++ b/frontend/src/css/Greeting.css
@@ -5,7 +5,7 @@
   grid-template-columns: repeat(10, 1fr);
   justify-items: center;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
 }
 
 .greetingContainer h1 {
