--- a/frontend/src/css/Homepage.css
+++ b/frontend/src/css/Homepage.css
@@ -1,6 +1,7 @@
 .homepageContainer {
   font-family: 'Roboto', sans-serif;
   color: white;
+  margin-top: -64px;
 }
 
 .homepageContainer h2 {
